syntax = "proto3";

package openaction.pool.v1;

option go_package = "openaction/pkg/poolpb";

message PoolInfo {
  string id = 1;
  string name = 2;
  string version = 3;
}

message RegisterRequest {
  PoolInfo info = 1;
}

message RegisterResponse {
  string assigned_id = 1;
}

message HeartbeatRequest {
  string pool_id = 1;
  int64 timestamp = 2;
}

message HeartbeatResponse {
  bool ok = 1;
}

message JobRequest {
  string pool_id = 1;
}

message JobResponse {
  string job_id = 1;
  string payload = 2;
}

message StepReport {
  string job_id = 1;
  string step_name = 2;
  string status = 3;
  int64 timestamp = 4;
  string log_line = 5;
}

message StepReportResponse {
  bool ok = 1;
}

service PoolService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc FetchJob(JobRequest) returns (JobResponse);
  rpc ReportStep(StepReport) returns (StepReportResponse);
}
